package org.forza.common.command;

/**
 * @Author:  
 * @DateTime: 2020/3/30
 * @Description: TODO
 */
public interface CommandCode {

    short getValue();
}
